# esp32s3-dongle-starter

./: .gitignore  README.md
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md  NEXT_STEPS.md  PROTOCOL.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/esp_hid/src/: nimble_hidd.c  nimble_hidh.c
firmware/main/: CMakeLists.txt  ble_hid_bridge.c  ble_hid_bridge.h  idf_component.yml  main.c  manager_protocol.c  manager_protocol.h  pairing_store.c  pairing_store.h  status_led.c  status_led.h  usb_hid_bridge.c  usb_hid_bridge.h
tools/: mock-dongle.cjs
web/: README.md  app.js  index.html  styles.css
